finalizando exemplo de coleta do gdd

--- a/base_dados/sdmx.ipynb
+++ b/base_dados/sdmx.ipynb
@@ -1459,6 +1459,753 @@
     "# Esse aqui é o valor alvo\n",
     "estrutura.measures.components"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a146db",
+   "metadata": {},
+   "source": [
+    "### Investigando os valores que podem ser filtrados\n",
+    "\n",
+    "Levando em consideração as dimensões:\n",
+    "- COUNTRY\n",
+    "- INDICATOR\n",
+    "- FREQUENCY\n",
+    "\n",
+    "Quais são os valores aceitáveis de cada um?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e0065445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "CL_COUNTRY",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Country",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "b1ec28c0-1352-4a6c-a702-bab053b91178",
+       "rows": [
+        [
+         "AFG",
+         "Afghanistan, Islamic Republic of"
+        ],
+        [
+         "ALB",
+         "Albania"
+        ],
+        [
+         "DZA",
+         "Algeria"
+        ],
+        [
+         "ASM",
+         "American Samoa"
+        ],
+        [
+         "AND",
+         "Andorra, Principality of"
+        ],
+        [
+         "AGO",
+         "Angola"
+        ],
+        [
+         "AIA",
+         "Anguilla, United Kingdom-British Overseas Territory"
+        ],
+        [
+         "ATG",
+         "Antigua and Barbuda"
+        ],
+        [
+         "ARG",
+         "Argentina"
+        ],
+        [
+         "ARM",
+         "Armenia, Republic of"
+        ],
+        [
+         "ABW",
+         "Aruba, Kingdom of the Netherlands"
+        ],
+        [
+         "AUS",
+         "Australia"
+        ],
+        [
+         "AUT",
+         "Austria"
+        ],
+        [
+         "AZE",
+         "Azerbaijan, Republic of"
+        ],
+        [
+         "BHS",
+         "Bahamas, The"
+        ],
+        [
+         "BHR",
+         "Bahrain, Kingdom of"
+        ],
+        [
+         "BGD",
+         "Bangladesh"
+        ],
+        [
+         "BRB",
+         "Barbados"
+        ],
+        [
+         "BLR",
+         "Belarus, Republic of"
+        ],
+        [
+         "BEL",
+         "Belgium"
+        ],
+        [
+         "BLZ",
+         "Belize"
+        ],
+        [
+         "BEN",
+         "Benin"
+        ],
+        [
+         "BMU",
+         "Bermuda"
+        ],
+        [
+         "BTN",
+         "Bhutan"
+        ],
+        [
+         "BOL",
+         "Bolivia"
+        ],
+        [
+         "BIH",
+         "Bosnia and Herzegovina"
+        ],
+        [
+         "BWA",
+         "Botswana"
+        ],
+        [
+         "BRA",
+         "Brazil"
+        ],
+        [
+         "VGB",
+         "British Virgin Islands"
+        ],
+        [
+         "BRN",
+         "Brunei Darussalam"
+        ],
+        [
+         "BGR",
+         "Bulgaria"
+        ],
+        [
+         "BFA",
+         "Burkina Faso"
+        ],
+        [
+         "BDI",
+         "Burundi"
+        ],
+        [
+         "CPV",
+         "Cabo Verde"
+        ],
+        [
+         "KHM",
+         "Cambodia"
+        ],
+        [
+         "CMR",
+         "Cameroon"
+        ],
+        [
+         "CAN",
+         "Canada"
+        ],
+        [
+         "CYM",
+         "Cayman Islands"
+        ],
+        [
+         "CAF",
+         "Central African Republic"
+        ],
+        [
+         "TCD",
+         "Chad"
+        ],
+        [
+         "CHL",
+         "Chile"
+        ],
+        [
+         "CHN",
+         "China, People's Republic of"
+        ],
+        [
+         "COL",
+         "Colombia"
+        ],
+        [
+         "COM",
+         "Comoros, Union of the"
+        ],
+        [
+         "COD",
+         "Congo, Democratic Republic of the"
+        ],
+        [
+         "COG",
+         "Congo, Republic of"
+        ],
+        [
+         "COK",
+         "Cook Islands"
+        ],
+        [
+         "CRI",
+         "Costa Rica"
+        ],
+        [
+         "HRV",
+         "Croatia, Republic of"
+        ],
+        [
+         "CUB",
+         "Cuba"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 337
+       }
+      },
+      "text/plain": [
+       "CL_COUNTRY\n",
+       "AFG          Afghanistan, Islamic Republic of\n",
+       "ALB                                   Albania\n",
+       "DZA                                   Algeria\n",
+       "ASM                            American Samoa\n",
+       "AND                  Andorra, Principality of\n",
+       "                        ...                  \n",
+       "BVT                             Bouvet Island\n",
+       "IOT            British Indian Ocean Territory\n",
+       "HMD         Heard Island and McDonald Islands\n",
+       "UMI      United States Minor Outlying Islands\n",
+       "GSAC    Southern African Customs Union (SACU)\n",
+       "Name: Country, Length: 337, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nome = 'CL_COUNTRY'\n",
+    "\n",
+    "valores = base_gdd.codelist[nome]\n",
+    "\n",
+    "df_valores = sdmx.to_pandas(valores)\n",
+    "display(df_valores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ab2e1616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "CL_GDD_INDICATOR",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Global Debt Database (GDD) Indicator",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "4fa029fd-18b0-486b-8496-7ac6141d8d13",
+       "rows": [
+        [
+         "FL_S1311MIXED_POGDP_PT",
+         "Debt instruments, Central government, Percent of GDP"
+        ],
+        [
+         "FL_S13_POGDP_PT",
+         "Debt instruments, General government, Percent of GDP"
+        ],
+        [
+         "FL_S14_POGDP_PT",
+         "Debt instruments, Households, Percent of GDP"
+        ],
+        [
+         "F3T4_S14_POGDP_PT",
+         "Debt securities and loans, Households, Percent of GDP"
+        ],
+        [
+         "FL_S11_POGDP_PT",
+         "Debt instruments, Non-financial corporations, Percent of GDP"
+        ],
+        [
+         "F3T4_S11_POGDP_PT",
+         "Debt securities and loans, Non-financial corporations, Percent of GDP"
+        ],
+        [
+         "FL_S11001_POGDP_PT",
+         "Debt instruments, Public non-financial corporations, Percent of GDP"
+        ],
+        [
+         "B1GQ_V_XDC",
+         "Gross domestic product (GDP), Current prices, Domestic currency"
+        ],
+        [
+         "B1GQ_V_USD",
+         "Gross domestic product (GDP), Current prices, US dollar"
+        ],
+        [
+         "FL_S1ZS_POGDP_PT",
+         "Debt instruments, Public sector, Percent of GDP"
+        ],
+        [
+         "FL_PS_POGDP_PT",
+         "Debt instruments, Private sector, Percent of GDP"
+        ],
+        [
+         "F3T4_PS_POGDP_PT",
+         "Debt securities and loans, Private sector, Percent of GDP"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 12
+       }
+      },
+      "text/plain": [
+       "CL_GDD_INDICATOR\n",
+       "FL_S1311MIXED_POGDP_PT    Debt instruments, Central government, Percent ...\n",
+       "FL_S13_POGDP_PT           Debt instruments, General government, Percent ...\n",
+       "FL_S14_POGDP_PT                Debt instruments, Households, Percent of GDP\n",
+       "F3T4_S14_POGDP_PT         Debt securities and loans, Households, Percent...\n",
+       "FL_S11_POGDP_PT           Debt instruments, Non-financial corporations, ...\n",
+       "F3T4_S11_POGDP_PT         Debt securities and loans, Non-financial corpo...\n",
+       "FL_S11001_POGDP_PT        Debt instruments, Public non-financial corpora...\n",
+       "B1GQ_V_XDC                Gross domestic product (GDP), Current prices, ...\n",
+       "B1GQ_V_USD                Gross domestic product (GDP), Current prices, ...\n",
+       "FL_S1ZS_POGDP_PT            Debt instruments, Public sector, Percent of GDP\n",
+       "FL_PS_POGDP_PT             Debt instruments, Private sector, Percent of GDP\n",
+       "F3T4_PS_POGDP_PT          Debt securities and loans, Private sector, Per...\n",
+       "Name: Global Debt Database (GDD) Indicator, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nome = 'CL_GDD_INDICATOR'\n",
+    "\n",
+    "valores = base_gdd.codelist[nome]\n",
+    "\n",
+    "df_valores = sdmx.to_pandas(valores)\n",
+    "display(df_valores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "29d5aa33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "CL_FREQ",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Frequency",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "d7e870ec-5290-4890-9b9f-86c38aa4b0e9",
+       "rows": [
+        [
+         "A",
+         "Annual"
+        ],
+        [
+         "D",
+         "Daily"
+        ],
+        [
+         "M",
+         "Monthly"
+        ],
+        [
+         "Q",
+         "Quarterly"
+        ],
+        [
+         "S",
+         "Half-yearly, semester"
+        ],
+        [
+         "W",
+         "Weekly"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 6
+       }
+      },
+      "text/plain": [
+       "CL_FREQ\n",
+       "A                   Annual\n",
+       "D                    Daily\n",
+       "M                  Monthly\n",
+       "Q                Quarterly\n",
+       "S    Half-yearly, semester\n",
+       "W                   Weekly\n",
+       "Name: Frequency, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "nome = 'CL_FREQ'\n",
+    "\n",
+    "valores = base_gdd.codelist[nome]\n",
+    "\n",
+    "df_valores = sdmx.to_pandas(valores)\n",
+    "display(df_valores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df897b21",
+   "metadata": {},
+   "source": [
+    "## Etapa final: requisição do dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "92ea2738",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "xml.Reader got no structure=… argument for StructureSpecificData\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "INDICATOR",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "COUNTRY",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "FREQUENCY",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "OVERLAP",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "DATA_SOURCE",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "DECIMALS_DISPLAYED",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "SCALE",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "TIME_PERIOD",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "value",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "fee2276b-65c9-4da2-87e3-30276eef70af",
+       "rows": [
+        [
+         "0",
+         "FL_PS_POGDP_PT",
+         "BRA",
+         "A",
+         "OL",
+         "OECD (2009-2021)",
+         "2",
+         "0",
+         "2000",
+         null
+        ],
+        [
+         "1",
+         "FL_PS_POGDP_PT",
+         "BRA",
+         "A",
+         "OL",
+         "OECD (2009-2021)",
+         "2",
+         "0",
+         "2001",
+         null
+        ],
+        [
+         "2",
+         "FL_PS_POGDP_PT",
+         "BRA",
+         "A",
+         "OL",
+         "OECD (2009-2021)",
+         "2",
+         "0",
+         "2002",
+         null
+        ],
+        [
+         "3",
+         "FL_PS_POGDP_PT",
+         "BRA",
+         "A",
+         "OL",
+         "OECD (2009-2021)",
+         "2",
+         "0",
+         "2003",
+         null
+        ],
+        [
+         "4",
+         "FL_PS_POGDP_PT",
+         "BRA",
+         "A",
+         "OL",
+         "OECD (2009-2021)",
+         "2",
+         "0",
+         "2004",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INDICATOR</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>FREQUENCY</th>\n",
+       "      <th>OVERLAP</th>\n",
+       "      <th>DATA_SOURCE</th>\n",
+       "      <th>DECIMALS_DISPLAYED</th>\n",
+       "      <th>SCALE</th>\n",
+       "      <th>TIME_PERIOD</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>FL_PS_POGDP_PT</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>A</td>\n",
+       "      <td>OL</td>\n",
+       "      <td>OECD (2009-2021)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FL_PS_POGDP_PT</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>A</td>\n",
+       "      <td>OL</td>\n",
+       "      <td>OECD (2009-2021)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FL_PS_POGDP_PT</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>A</td>\n",
+       "      <td>OL</td>\n",
+       "      <td>OECD (2009-2021)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FL_PS_POGDP_PT</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>A</td>\n",
+       "      <td>OL</td>\n",
+       "      <td>OECD (2009-2021)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>FL_PS_POGDP_PT</td>\n",
+       "      <td>BRA</td>\n",
+       "      <td>A</td>\n",
+       "      <td>OL</td>\n",
+       "      <td>OECD (2009-2021)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        INDICATOR COUNTRY FREQUENCY OVERLAP       DATA_SOURCE  \\\n",
+       "0  FL_PS_POGDP_PT     BRA         A      OL  OECD (2009-2021)   \n",
+       "1  FL_PS_POGDP_PT     BRA         A      OL  OECD (2009-2021)   \n",
+       "2  FL_PS_POGDP_PT     BRA         A      OL  OECD (2009-2021)   \n",
+       "3  FL_PS_POGDP_PT     BRA         A      OL  OECD (2009-2021)   \n",
+       "4  FL_PS_POGDP_PT     BRA         A      OL  OECD (2009-2021)   \n",
+       "\n",
+       "  DECIMALS_DISPLAYED SCALE TIME_PERIOD  value  \n",
+       "0                  2     0        2000    NaN  \n",
+       "1                  2     0        2001    NaN  \n",
+       "2                  2     0        2002    NaN  \n",
+       "3                  2     0        2003    NaN  \n",
+       "4                  2     0        2004    NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import sdmx\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Cliente IMF\n",
+    "client = sdmx.Client(\"IMF_DATA\")\n",
+    "\n",
+    "\n",
+    "key = 'BRA+USA.FL_S13_POGDP_PT+FL_PS_POGDP_PT.A'\n",
+    "\n",
+    "# Parâmetros de tempo e atributos\n",
+    "params = dict(\n",
+    "    startPeriod=\"2000\"\n",
+    ")\n",
+    "\n",
+    "# Baixar os dados\n",
+    "data_msg = client.data(\"GDD\", key=key, params=params, dsd=estrutura)\n",
+    "\n",
+    "# Converter para pandas DataFrame\n",
+    "df = sdmx.to_pandas(\n",
+    "    data_msg, \n",
+    "    #datetime=\"TIME_PERIOD\"\n",
+    "    )\n",
+    "\n",
+    "df = df.reset_index()\n",
+    "\n",
+    "display(df.head())"
+   ]
   }
  ],
  "metadata": {
