nova base de demografia e ER em csv

--- a/base_dados/ER/2_coleta.ipynb
+++ b/base_dados/ER/2_coleta.ipynb
@@ -291,15 +291,15 @@
          "type": "float"
         }
        ],
-       "ref": "7e115191-18bb-4e35-b43b-a6bc5176a461",
+       "ref": "5285e5c8-9f4f-4324-b4ef-5ba7cd780e66",
        "rows": [
         [
          "0",
          "USA",
          "XDC_USD",
          "EOP_RT",
-         "M",
-         "2000-M01",
+         "Q",
+         "2000-Q1",
          "1.0",
          null
         ],
@@ -308,8 +308,8 @@
          "USA",
          "XDC_USD",
          "EOP_RT",
-         "M",
-         "2000-M02",
+         "Q",
+         "2000-Q2",
          "1.0",
          null
         ],
@@ -318,8 +318,8 @@
          "USA",
          "XDC_USD",
          "EOP_RT",
-         "M",
-         "2000-M03",
+         "Q",
+         "2000-Q3",
          "1.0",
          null
         ],
@@ -328,8 +328,8 @@
          "USA",
          "XDC_USD",
          "EOP_RT",
-         "M",
-         "2000-M04",
+         "Q",
+         "2000-Q4",
          "1.0",
          null
         ],
@@ -338,8 +338,8 @@
          "USA",
          "XDC_USD",
          "EOP_RT",
-         "M",
-         "2000-M05",
+         "Q",
+         "2001-Q1",
          "1.0",
          null
         ]
@@ -383,8 +383,8 @@
        "      <td>USA</td>\n",
        "      <td>XDC_USD</td>\n",
        "      <td>EOP_RT</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2000-M01</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2000-Q1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -393,8 +393,8 @@
        "      <td>USA</td>\n",
        "      <td>XDC_USD</td>\n",
        "      <td>EOP_RT</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2000-M02</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2000-Q2</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -403,8 +403,8 @@
        "      <td>USA</td>\n",
        "      <td>XDC_USD</td>\n",
        "      <td>EOP_RT</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2000-M03</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2000-Q3</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -413,8 +413,8 @@
        "      <td>USA</td>\n",
        "      <td>XDC_USD</td>\n",
        "      <td>EOP_RT</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2000-M04</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2000-Q4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -423,8 +423,8 @@
        "      <td>USA</td>\n",
        "      <td>XDC_USD</td>\n",
        "      <td>EOP_RT</td>\n",
-       "      <td>M</td>\n",
-       "      <td>2000-M05</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>2001-Q1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -434,11 +434,11 @@
       ],
       "text/plain": [
        "  COUNTRY INDICATOR TYPE_OF_TRANSFORMATION FREQUENCY TIME_PERIOD  value  index\n",
-       "0     USA   XDC_USD                 EOP_RT         M    2000-M01    1.0    NaN\n",
-       "1     USA   XDC_USD                 EOP_RT         M    2000-M02    1.0    NaN\n",
-       "2     USA   XDC_USD                 EOP_RT         M    2000-M03    1.0    NaN\n",
-       "3     USA   XDC_USD                 EOP_RT         M    2000-M04    1.0    NaN\n",
-       "4     USA   XDC_USD                 EOP_RT         M    2000-M05    1.0    NaN"
+       "0     USA   XDC_USD                 EOP_RT         Q     2000-Q1    1.0    NaN\n",
+       "1     USA   XDC_USD                 EOP_RT         Q     2000-Q2    1.0    NaN\n",
+       "2     USA   XDC_USD                 EOP_RT         Q     2000-Q3    1.0    NaN\n",
+       "3     USA   XDC_USD                 EOP_RT         Q     2000-Q4    1.0    NaN\n",
+       "4     USA   XDC_USD                 EOP_RT         Q     2001-Q1    1.0    NaN"
       ]
      },
      "metadata": {},
