Corrigindo erro de duplicação

--- a/base_dados/Resultados/analise_IRFCL.ipynb
+++ b/base_dados/Resultados/analise_IRFCL.ipynb
@@ -5015,13 +5015,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "e9c4c026",
    "metadata": {},
    "outputs": [],
    "source": [
     "lista_dfs = []\n",
     "merge_final = pd.DataFrame()\n",
+    "\n",
+    "irfcl_null = irfcl_null[irfcl_null.SECTOR == \"S1XS1311\"]\n",
     "\n",
     "for pais in irfcl_null.COUNTRY.unique():\n",
     "    df_filtrado = irfcl_null[irfcl_null['COUNTRY'] == pais]\n",
