fix(airflow): ajusta permissao e conexao postgres

--- a/silver/bronze_silver.ipynb
+++ b/silver/bronze_silver.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "e4d83edf",
    "metadata": {},
    "outputs": [
@@ -1454,11 +1454,12 @@
     "def write_spark_to_postgres_in_batches(\n",
     "    sdf,\n",
     "    table_name: str,\n",
-    "    schema: str = \"raw\",\n",
+    "    schema: str = \"bronze\",  # ✅ Schema correto\n",
     "    conflict_fields: List[str] = None,  # ex.: [\"country\",\"time_period\"]\n",
     "    primary_key: List[str] = None,      # ex.: [\"country\",\"time_period\"]\n",
     "    batch_size: int = 10_000,\n",
     "    sanitize_columns: bool = True,\n",
+    "    conn_id: str = \"postgres_dw\",  # 🔥 NOVO: usar conexão do Data Warehouse\n",
     ") -> None:\n",
     "    \"\"\"\n",
     "    Envia um Spark DF ao Postgres chamando ClientPostgresDB.insert_data() em lotes.\n",
@@ -1466,6 +1467,10 @@
     "    - Sem toPandas (usa toLocalIterator)\n",
     "    - Cria a tabela automaticamente (via insert_data -> create_table_if_not_exists)\n",
     "    - Pode fazer UPSERT se conflict_fields for fornecido\n",
+    "    \n",
+    "    🔥 IMPORTANTE: Usa conn_id=\"postgres_dw\" para salvar no Data Warehouse!\n",
+    "    \n",
+    "    Schemas disponíveis no data_warehouse: staging, bronze, silver, gold\n",
     "    \"\"\"\n",
     "    # 1) Colunas: sanitizar (recomendado se você tem nomes com \"/\", espaços, etc.)\n",
     "    sdf_out = sdf\n",
@@ -1473,9 +1478,12 @@
     "    if sanitize_columns:\n",
     "        sdf_out, rename_map = sanitize_columns_spark(sdf_out)\n",
     "\n",
-    "    # 2) Conexão\n",
-    "    conn_str = get_postgres_conn()\n",
+    "    # 2) Conexão - 🔥 USANDO A CONEXÃO CORRETA DO DATA WAREHOUSE\n",
+    "    conn_str = get_postgres_conn(conn_id=conn_id)\n",
     "    client = ClientPostgresDB(conn_str)\n",
+    "    \n",
+    "    print(f\"[INFO] Conectando ao banco via conn_id='{conn_id}'\")\n",
+    "    print(f\"[INFO] Salvando em schema='{schema}', tabela='{table_name}'\")\n",
     "\n",
     "    # 3) Iterar em lotes\n",
     "    batch: List[Dict[str, Any]] = []\n",
@@ -1519,15 +1527,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exemplo de chamada\n",
+    "# 🔥 Exemplo de chamada - USANDO CONEXÃO CORRETA DO DATA WAREHOUSE\n",
     "write_spark_to_postgres_in_batches(\n",
     "    clean_df,\n",
-    "    table_name=\"bop_clean\",         # escolha o nome da tabela\n",
-    "    schema=\"raw\",                   # ou \"silver\"/\"gold\", como preferir\n",
+    "    table_name=\"bop_clean\",                     # nome da tabela\n",
+    "    schema=\"bronze\",                            # ✅ schema correto\n",
     "    conflict_fields=[\"country\",\"time_period\"],  # para UPSERT\n",
     "    primary_key=[\"country\",\"time_period\"],      # cria PK se a tabela for nova\n",
     "    batch_size=10_000,\n",
-    "    sanitize_columns=True,          # recomendo True se você tiver nomes com \"/\"\n",
+    "    sanitize_columns=True,                      # recomendado se tiver nomes com \"/\"\n",
+    "    conn_id=\"postgres_dw\",                      # 🔥 CORRIGIDO: usar Data Warehouse!\n",
     ")\n"
    ]
   }
