--- a/silver/bop_analysis.ipynb
+++ b/silver/bop_analysis.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "90cf2263",
    "metadata": {},
    "outputs": [
@@ -95,9 +95,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base Path: /home/davi/Área de Trabalho/bancos2/TrabalhoSBD2\n",
-      "Data Path: /home/davi/Área de Trabalho/bancos2/TrabalhoSBD2/base_dados/Resultados\n",
-      "Spark Config Path: /home/davi/Área de Trabalho/bancos2/TrabalhoSBD2/spark_config\n"
+      "Base Path: /home/mateus/Documentos/Faculdade/bancos2/TrabalhoSBD2\n",
+      "Data Path: /home/mateus/Documentos/Faculdade/bancos2/TrabalhoSBD2/base_dados/Resultados\n",
+      "Spark Config Path: /home/mateus/Documentos/Faculdade/bancos2/TrabalhoSBD2/spark_config\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "4202999b",
    "metadata": {},
    "outputs": [
@@ -144,24 +144,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/10/09 15:16:46 WARN Utils: Your hostname, davi-550XDA resolves to a loopback address: 127.0.1.1; using 192.168.0.12 instead (on interface wlo1)\n",
-      "25/10/09 15:16:46 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/10/17 12:04:39 WARN Utils: Your hostname, mateus-730QED resolves to a loopback address: 127.0.1.1; using 172.29.99.42 instead (on interface wlo1)\n",
+      "25/10/17 12:04:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/10/09 15:16:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/10/09 15:16:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/10/17 12:04:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "INFO:config:Spark Session criada: BOP_Silver_Analysis\n",
-      "INFO:config:Spark UI disponível em: http://192.168.0.12:4040\n",
-      "INFO:config:Spark Session criada: BOP_Silver_Analysis\n",
-      "INFO:config:Spark UI disponível em: http://192.168.0.12:4040\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
-      "25/10/09 15:16:47 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n"
+      "INFO:config:Spark UI disponível em: http://172.29.99.42:4040\n",
+      "25/10/17 12:04:44 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
+      "25/10/17 12:04:44 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n",
+      "25/10/17 12:04:44 WARN SQLConf: The SQL config 'spark.sql.adaptive.coalescePartitions.minPartitionNum' has been deprecated in Spark v3.2 and may be removed in the future. Use 'spark.sql.adaptive.coalescePartitions.minPartitionSize' instead.\n"
      ]
     },
     {
@@ -169,7 +161,7 @@
      "output_type": "stream",
      "text": [
       "Spark Version: 3.5.1\n",
-      "Spark UI: http://192.168.0.12:4040\n"
+      "Spark UI: http://172.29.99.42:4040\n"
      ]
     }
    ],
@@ -804,7 +796,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -818,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
