fix/arquitetura-silver

--- a/transformer/job_etl/bronze_silver.ipynb
+++ b/transformer/job_etl/bronze_silver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "85ff26a8",
    "metadata": {},
    "outputs": [
@@ -25,12 +25,12 @@
     "if 'AIRFLOW_HOME' in os.environ:\n",
     "    # Running in Airflow\n",
     "    BASE_PATH = Path('/opt/airflow')\n",
-    "    DATA_PATH = BASE_PATH / 'base_dados' / 'Resultados'\n",
+    "    DATA_PATH = BASE_PATH / 'data_layer' / 'raw' / 'Resultados'\n",
     "    SPARK_CONFIG_PATH = BASE_PATH / 'spark_config'\n",
     "else:\n",
     "    # Running manually\n",
-    "    BASE_PATH = Path.cwd().parent\n",
-    "    DATA_PATH = BASE_PATH / 'base_dados' / 'Resultados'\n",
+    "    BASE_PATH = Path.cwd().parent.parent\n",
+    "    DATA_PATH = BASE_PATH / 'data_layer' / 'raw' / 'Resultados'\n",
     "    SPARK_CONFIG_PATH = BASE_PATH / 'spark_config'\n",
     "\n",
     "# Add spark_config to path\n",
@@ -1761,7 +1761,7 @@
     "def write_spark_to_postgres_in_batches(\n",
     "    sdf,\n",
     "    table_name: str,\n",
-    "    schema: str = \"bronze\",  # ✅ Schema correto\n",
+    "    schema: str = \"silver\",  # ✅ Schema correto\n",
     "    conflict_fields: List[str] = None,  # ex.: [\"country\",\"time_period\"]\n",
     "    primary_key: List[str] = None,      # ex.: [\"country\",\"time_period\"]\n",
     "    batch_size: int = 10_000,\n",
@@ -1838,7 +1838,7 @@
     "write_spark_to_postgres_in_batches(\n",
     "    clean_df,\n",
     "    table_name=\"bop_clean\",                     # nome da tabela\n",
-    "    schema=\"bronze\",                            # ✅ schema correto\n",
+    "    schema=\"silver\",                            # ✅ schema correto\n",
     "    conflict_fields=[\"country\",\"time_period\"],  # para UPSERT\n",
     "    primary_key=[\"country\",\"time_period\"],      # cria PK se a tabela for nova\n",
     "    batch_size=10_000,\n",
