feat/job_etl_silver_gold

--- a/transformer/job_etl/bronze_silver.ipynb
+++ b/transformer/job_etl/bronze_silver.ipynb
@@ -27,18 +27,51 @@
     "    BASE_PATH = Path('/opt/airflow')\n",
     "    DATA_PATH = BASE_PATH / 'data_layer' / 'raw' / 'Resultados'\n",
     "    SPARK_CONFIG_PATH = BASE_PATH / 'spark_config'\n",
+    "    POSTGRES_HELPER_PATH = BASE_PATH / 'postgres' / 'helpers'\n",
+    "    POSTGRES_PLUGINS_PATH = BASE_PATH / 'postgres' / 'plugins'\n",
     "else:\n",
     "    # Running manually\n",
     "    BASE_PATH = Path.cwd().parent.parent\n",
     "    DATA_PATH = BASE_PATH / 'data_layer' / 'raw' / 'Resultados'\n",
     "    SPARK_CONFIG_PATH = BASE_PATH / 'spark_config'\n",
+    "    POSTGRES_HELPER_PATH = BASE_PATH / 'postgres' / 'helpers'\n",
+    "    POSTGRES_PLUGINS_PATH = BASE_PATH / 'postgres' / 'plugins'\n",
     "\n",
-    "# Add spark_config to path\n",
+    "# Add paths to system path\n",
     "sys.path.insert(0, str(SPARK_CONFIG_PATH))\n",
+    "sys.path.insert(0, str(POSTGRES_HELPER_PATH))\n",
+    "sys.path.insert(0, str(POSTGRES_PLUGINS_PATH))\n",
     "\n",
-    "print(f\"Base Path: {BASE_PATH}\")\n",
-    "print(f\"Data Path: {DATA_PATH}\")\n",
-    "print(f\"Spark Config Path: {SPARK_CONFIG_PATH}\")"
+    "print(f\"✅ Base Path: {BASE_PATH}\")\n",
+    "print(f\"✅ Data Path: {DATA_PATH}\")\n",
+    "print(f\"✅ Spark Config Path: {SPARK_CONFIG_PATH}\")\n",
+    "print(f\"✅ Postgres Helper Path: {POSTGRES_HELPER_PATH}\")\n",
+    "print(f\"✅ Postgres Plugins Path: {POSTGRES_PLUGINS_PATH}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5acc46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configurar variáveis de ambiente para conexão PostgreSQL quando rodar manualmente\n",
+    "if 'AIRFLOW_HOME' not in os.environ:\n",
+    "    print(\"🔧 Configurando variáveis de ambiente para execução manual...\")\n",
+    "    \n",
+    "    # Configuração do Data Warehouse (conexão local via Docker)\n",
+    "    os.environ['POSTGRES_DW_DB'] = 'data_warehouse'\n",
+    "    os.environ['POSTGRES_DW_USER'] = 'dw_user'\n",
+    "    os.environ['POSTGRES_DW_PASSWORD'] = 'dw_password'\n",
+    "    os.environ['POSTGRES_HOST'] = 'localhost'  # Fora do Docker usa localhost\n",
+    "    os.environ['POSTGRES_PORT'] = '5433'        # Porta mapeada no docker-compose\n",
+    "    \n",
+    "    print(f\"   ✅ Database: {os.environ['POSTGRES_DW_DB']}\")\n",
+    "    print(f\"   ✅ Host: {os.environ['POSTGRES_HOST']}\")\n",
+    "    print(f\"   ✅ Port: {os.environ['POSTGRES_PORT']}\")\n",
+    "else:\n",
+    "    print(\"✅ Rodando no Airflow - usando configurações do ambiente Docker\")"
    ]
   },
   {
